--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/delay/macro-delay.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/delay/macro-delay.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding-left: 5px;
 }
 
 .form-group {
