--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/mouse/macro-mouse.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/mouse/macro-mouse.component.scss
@@ -1,12 +1,12 @@
 .macro-mouse {
     &__types {
+        padding-left: 5px;
         max-width: var(--macro-sub-item-max-width);
+        border-right: 1px solid var(--color-macro-border);
     }
 
     &__actions {
-        border-left: 1px solid var(--color-macro-border);
         padding-left: 2rem;
-        width: 100%;
     }
 }
 
