--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/text/macro-text.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/text/macro-text.component.scss
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     flex-direction: column;
-    position: relative;
+    padding-left: 5px;
 }
 
 .macro__text-input {
